toolchain/internal/core/analysis/testdata/errors/patterns/mismatched_braces.vdl
// @expect: E401

pattern Invalid = "events.{id}.{name"
